# ask

./: .gitignore  Cargo.toml  README.md  index.html  package.json  styles.css
src/: App.svelte  app.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: default.css
src-tauri/src/: config.rs  lib.rs  main.rs  window.rs
